<resources>
    <string name="app_name">Greens</string>
    <string name="start_shift">START SHIFT</string>
    <string name="end_shift">END SHIFT</string>
    <string name="start_pay_period">START PAY PERIOD</string>
    <string name="end_pay_period">END PAY PERIOD</string>
    <string name="earned_income_since">Earned income since <b>(%1$s/%2$s)</b></string>
    // mm/dd
    <string name="no_start_date_set">No start date set, cannot display earned income</string>

    <!-- Settings Strings -->
    <string name="title_activity_settings">Settings</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="select_your_state">Select your state:</string>
    <string name="save_settings">Save Settings</string>
    <string-array name="states_array">  // App currently only supports NY
        <item>NY</item>
    </string-array>
</resources>